deploy/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: checkout
spec:
  to:
    kind: Service
    name: checkout-api
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
